--- a/html1.html
+++ b/html1.html
@@ -1,4 +1,12 @@
-<h1>Pangolin</h1>
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <h1>HEADING</h1>
+</head>
+<body>
+    <h1>Pangolin</h1>
 
 <h2>Intro</h2>
 
@@ -11,3 +19,5 @@
 <h2>Poaching</h2>
 
 <p>Pangolins are threatened by poaching (for their meat and scales, which are used in Chinese traditional medicine) and heavy deforestation of their natural habitats, and are the most trafficked mammals in the world.As of January 2020, of the eight species of pangolin, three (Manis culionensis, M. pentadactyla and M. javanica) are listed as critically endangered, three (Phataginus tricuspis, Manis crassicaudata and Smutsia gigantea) are listed as endangered and two (Phataginus tetradactyla and Smutsia temminckii) are listed as vulnerable on the Red List of Threatened Species of the International Union for Conservation of Nature.</p>
+</body>
+</html>
