--- a/html2.html
+++ b/html2.html
@@ -24,5 +24,11 @@
 <li>Annie Hall</li></ul>
 
 
+    <!-- A blank page...Don't worry you got this! -->
+<a href='https://en.wikipedia.org/wiki/Wolf'>LINK</a>
+
+
+<img src='https://upload.wikimedia.org/wikipedia/commons/5/5f/Kolm%C3%A5rden_Wolf.jpg' alt=Bird>
+
 </body>
 </html>
