--- a/html2.html
+++ b/html2.html
@@ -28,7 +28,7 @@
 <a href='https://en.wikipedia.org/wiki/Wolf'>LINK</a>
 
 
-<img src='https://upload.wikimedia.org/wikipedia/commons/5/5f/Kolm%C3%A5rden_Wolf.jpg' alt=Bird>
+<img src='https://upload.wikimedia.org/wikipedia/commons/5/5f/Kolm%C3%A5rden_Wolf.jpg' alt=Wolf Picture>
 
 </body>
 </html>
